--- a/pages/csgo.html
+++ b/pages/csgo.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="css/estilo.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/favico/favicon.ico">
-    <title>Está na Tag, está no Ar!</title>
+    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="../css/contstyle.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../img/favico/favicon.ico">
+    <title>Jeff Bezos vai ao espaço no 1º voo tripulado da Blue Origin</title>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
       <center>
       <div class="container">
         <div class="imgLogo">
-        <img src="img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
+        <img src="../img/logo/logoaju.png" alt="Tag.com Logo" width="25%" height="auto">
         </div>
       </div>
       </center>
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link active" href="./index.html" style="color: red;">Tag.com <span class="sr-only">(Página atual)</span></a>
+                <a class="nav-link active" href="../index.html" style="color: red;">Tag.com <span class="sr-only">(Página atual)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" style="color: white;">Games</a>
@@ -63,53 +63,76 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/slide/techajuste.png" alt="Tecnologia Hoje">
+            <img class="d-block w-100" src="../img/slide/techajuste.png" alt="Tecnologia Hoje">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slide/techaju.jpg" alt="Avanços Tecnologicos">
+            <img class="d-block w-100" src="../img/slide/techaju.jpg" alt="Avanços Tecnologicos">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/slide/eradainfoaju.jpg" alt="Informação">
+            <img class="d-block w-100" src="../img/slide/eradainfoaju.jpg" alt="Informação">
           </div>
         </div>
       </div>
       </div>
     </header>
 
+    <main>
+      <div class="content" style="padding: 2% 2%;">
+        <h1 class="textCenter">
+          <strong>
+            <font color="red">
+             Jeff Bezos vai ao espaço no 1º voo tripulado da Blue Origin
+            </font>
+          </strong>
+        </h1>
+        <div>
+        <img src="../img/noticias/future.jpg" alt="Jeff Bezos vai ao espaço" width="30%" align="left"/>
+        </div>
+
+         <p style="padding-left: 25%;"> O New Shepard, primeiro foguete tripulado da Blue Origin, vai ter o 
+         fundador e CEO, Jeff Bezos, como um dos passageiros em uma viagem 
+         ao espaço. O próprio bilionário, que fundou o grupo Amazon, confirmou a notícia, 
+         informando que o irmão, Mark Bezos, também vai estar presente.</p>
+
+         <p>Ele contou no instagram que desde quando tinha cinco anos, 
+         sonhava em viajar para o espaço, 
+         e no dia 20 de julho, vai embarcar nessa jornada com o irmão. 
+         A maior das aventuras, com o melhor amigo.</p>
+
+         <p>Bezos vai se tornar o primeiro bilionário a viajar ao espaço: Elon Musk, 
+         fundador da SpaceX, já manifestou o desejo de 
+         embarcar nesse tipo de viagem, mas nunca marcou uma data, 
+         e Richard Branson, da Virgin Galactic, planeja embarcar em algo similar no segundo semestre.</p>
+
+         <p>O New Shepard que vai levar Jeff Bezos ao espaço foi projetado 
+         para embarcar uma tripulação de seis pessoas, em um voo de 
+         mais ou menos 11 minutos de duração com previsão de chegar a 
+         pouco mais de 96 quilômetros acima da Terra.</p>
+
+         <p>Não está claro ainda se a viagem dele também inclui 
+         passageiros pagantes, mesmo porque ainda não foram divulgados os 
+         preços das passagens. Mas pelo menos um destes “primeiros passageiros” 
+         vai ser o vencedor de um leilão que ainda está em curso. Os lances, 
+         té o momento, estão em quase 3 milhões de dólares, ou mais de 15 milhões de reais.</p>
+      </div>
+  </main>
+
     <aside>
       <div class="row" style="margin: 0%;">
         <div class="col-md border-left" style="padding: 2% 1%;">
-            <img class="card-img" src="img/noticias/awp.png"/>
-            <div class="bgGrid textCenter">
-              <a href="#" id="meulink">CS:GO: Skin para arma é vendida por R$ 658 mil</a>
-            </div>
-            <hr>
-            <img class="card-img" src="img/noticias/lolline.jpg"/>
-            <div class="bgGrid textCenter">
-              <a href="#" id="meulink">Equipe de esports recebe US$ 210 milhões de empresa</a>
-            </div>
-            <hr>
-            <img class="card-img" src="img/noticias/future.jpg"/>
-            <div class="bgGrid textCenter">
-              <a href="./pages/jeffbezos.html" id="meulink">Jeff Bezos vai ao espaço no 1º voo tripulado da Blue Origin</a>
-            </div>
-        </div>
-
-        <!--2 Coluna com Imagens em card de noticias-->
-        <div class="col-md border-left" style="padding: 2% 1%;">
-            <img class="card-img" src="img/noticias/tesla.png">
+            <img class="card-img" src="../img/noticias/tesla.png">
             <div class="bgGrid textCenter">
               <a href="#" id="meulink">Tesla Model S Plaid+ está cancelado, anuncia Elon Musk</a>
             </div>
             <hr>
-            <img class="card-img" src="img/noticias/rocketleague.jpg"/>
+            <img class="card-img" src="../img/noticias/rocketleague.jpg"/>
             <div class="bgGrid textCenter">
-              <a href="./pages/rocket_league.html" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
+              <a href="#" id="meulink">Rocket League celebra mês do orgulho LGBTQ+ com novidades</a>
             </div>
             <hr>
-            <img class="card-img" src="img/noticias/eua.jfif"/>
+            <img class="card-img" src="../img/noticias/eua.jfif"/>
             <div class="bgGrid textCenter">
-              <a href="./pages/eua_paises.html" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
+              <a href="#" id="meulink">59 empresas da China não podem comprar tecnologias dos EUA</a>
             </div>
         </div>
 
@@ -118,19 +141,19 @@
               <h6 class="textCenter" style="color: red;">Editores</h6>
               <div class="row">
                <div class="col-sm">
-                 <img class="imgEditores" src="img/avatar/av2.png"/>
+                 <img class="imgEditores" src="../img/avatar/av2.png"/>
                  <p style="font-size: 0.9em;">Marcos<br>
                  Isaias</p>
                </div>
 
               <div class="col-sm">
-               <img class="imgEditores" src="img/avatar/av1.png"/>
+               <img class="imgEditores" src="../img/avatar/av1.png"/>
                <p style="font-size: 0.9em;">Arthur<br> 
                  Chaves</p>
               </div>
 
               <div class="col-sm">
-               <img class="imgEditores" src="img/avatar/av3.png"/>
+               <img class="imgEditores" src="../img/avatar/av3.png"/>
                <p style="font-size: 0.9em;">Leonardo<br> 
                   Albrecht</p>
               </div>
@@ -176,72 +199,17 @@
               <u>REDE SOCIAIS</u>
             </div>
             <div style="padding: 5% 0%;">
-            <img class="card-img" src="img/redesocial/facebook.png">
+            <img class="card-img" src="../img/redesocial/facebook.png">
             </div>
             <div style="padding: 5% 0%;">
-            <img class="card-img" src="img/redesocial/instagram.png">
+            <img class="card-img" src="../img/redesocial/instagram.png">
             </div>
             <div style="padding: 5% 0%;">
-            <img class="card-img" src="img/redesocial/twitter.png">
+            <img class="card-img" src="../img/redesocial/twitter.png">
             </div>
         </div>
       </div>
     </aside>
-
-    <!--Grid com 3 colunas, para sistema de noticias em destaque-->
-    <section>
-      <div style="padding: 2% 2%;">
-       <div class="row">
-        <div class="col-md-4">
-          <img class="card-img" src="img/grid/facebooknot.jpg" alt="Facebook Noticia">
-          <div class="textGrid textCenter">
-            <a href="#" id="meulink">Facebook é investigado por paises.</a>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <img class="card-img" src="img/grid/notwitter.jpg" alt="Twitter Noticia">
-          <div class="textGrid textCenter">
-            <a href="#" id="meulink">Twitter blue é lançado oficialmente.</a>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <img class="card-img" src="img/grid/microsoft.jpg" alt="Microsoft Noticia">
-          <div class="textGrid textCenter">
-            <a href="#" id="meulink">Microsoft: Anuncia evento que podera,...</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    
-    <!--Conteúdo do Site-->
-    <main>
-        <table>
-          <tr>
-            <td><img  width="100" src="img/conteudo/gnoticia.png"/></td>
-  
-            <td>
-              <a href="#" id="linkRed">Google vai permitir que buscadores rivais 
-              apareçam de graça em dispositivos Android na Europa</a>
-            </td> 
-          </tr>
-  
-        </table>
-  
-        <hr>
-  
-        <table>
-          <tr>
-            <td><img  width="100" src="img/conteudo/inoticia.png"/></td>
-  
-            <td> 
-              <a href="#" id="linkRed">Internet global sofre falha e grandes 
-              sites saem do ar</a>
-            </td> 
-          </tr>
-        </table>
-    </main>
 
     <!--Footer com texto com cores da paleta de cor-->
     <footer>
